changed treatments to test

--- a/_data/treatments.yml
+++ b/_data/treatments.yml
@@ -1,5 +1,5 @@
 - icon: icon-user-md
-  title: Invisible braces
+  title: haja dermato
   description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
 
 - icon: icon-diamond
