--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ logo_url: svg/min/logo.svg
 # Hero
 hero: 
     hero_img: hero.jpg
-    hero_title: DentistSmile
-    hero_description: A responsive Jekyll theme for dental clinics.
+    hero_title: Dr. Nabil Imadali | Cabinet de dermatologie | Boumerdes
+    hero_description: Site du cabinet dermatologique du Dr. Nabil Imadali.
 
 # Contact form
 api_token: # Enter API token here
