changed some content

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ api_token: # Enter API token here
 # Contact info
 contact:
     phone: 932 50 540
-    emergency: 931 53 234
+#    emergency: 931 53 234
     email: contact@yoursite.com
     address: Cité 11 Decembre 1960, <br> Boumerdès - Algérie
 
