--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Dr. Nabil Imadali
 description: "Site du cabinet dermatologique du Dr. Nabil Imadali."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the name of your domain
-logo_url: svg/min/logo.svg
+logo_url: svg/logo.png
 
 # Hero
 # hero: 
