added photos to content and changed title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Dr. Nabil Imadali
+title: Dr. Nabil Imadali - Dermatologue et Centre Laser - Boumerdès
 description: "Site du cabinet dermatologique du Dr. Nabil Imadali."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the name of your domain
