--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,6 +1,6 @@
-- image_thumb: gallery-small.jpg
-  image_large: gallery-large.jpg
-  image_alt: something meaningful
+- image_thumb: laser-small.jpg
+  image_large: laser-large.jpg
+  image_alt: Laser CYNOSURE alexandrite /yag
 
 - image_thumb: gallery-small2.jpg
   image_large: gallery-large.jpg
@@ -11,21 +11,5 @@
   image_alt: something meaningful
 
 - image_thumb: gallery-small2.jpg
-  image_large: gallery-large.jpg
-  image_alt: something meaningful
-
-- image_thumb: gallery-small2.jpg
-  image_large: gallery-large.jpg
-  image_alt: something meaningful
-
-- image_thumb: gallery-small.jpg
-  image_large: gallery-large.jpg
-  image_alt: something meaningful
-
-- image_thumb: gallery-small2.jpg
-  image_large: gallery-large.jpg
-  image_alt: something meaningful
-
-- image_thumb: gallery-small.jpg
   image_large: gallery-large.jpg
   image_alt: something meaningful
