--- a/_data/treatments.yml
+++ b/_data/treatments.yml
@@ -1,23 +1,24 @@
 - icon: icon-user-md
   title: Dermatologie générale
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+  description: Maladies de la peau, soins et conseils.
 
 - icon: icon-bolt
   title: Cheveux et cuir chevelu
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+  description: Pour soigner et garder des cheveux en bonnes santé.
 
 - icon: icon-tint
   title: Chirurgie dermatologique
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+  description: Actes chirurgicaux qui concernent la peau dans un cadre répondant aux normes sécuritaires actuelles.
 
 - icon: icon-leaf
-  title: Epilation au laser cynosure
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+  title: Épilation au LASER de marque CYNOSURE
+  description:  Meilleure technique pour se débarrasser durablement d'une pilosité excessive ou d’un hirsutisme.
+
 
 - icon: icon-flask
   title: Cryothérapie
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+  description: Traitement par le froid contre différents types de verrues.
 
 - icon: icon-bed
   title: Mésopécie
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+  description: Combattre la chute de cheveux et traiter le problème dès la racine.
