--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ skype: skype:obaez_design?userinfo
 feed: yes
 
 # Footer
-copyright: © 2015 DentistSmile - All rights reserved
+copyright: © 2017 Sofiane and Nabil Imadali, All rights reserved. (Based on the Jekyll DentistSmile template).
 
 # Build settings
 markdown: kramdown
