--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ api_token: # Enter API token here
 
 # Contact info
 contact:
-    phone: 932 50 540
+    phone: (Demander au secrétariat)
 #    emergency: 931 53 234
-    email: contact@yoursite.com
+    email: nabil.imadali@yahoo.fr
     address: Cité 11 Decembre 1960, <br> Boumerdès - Algérie
 
 # Opening hours
