--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ contact:
     phone: Demander au secrétariat
 #    emergency: 931 53 234
     email: dermatologue.boumerdes@gmail.com
-    address: Cité 11 Decembre 1960, <br> Boumerdès - Algérie
+    address: Batiment 60, Numéro 2 (en face de la patisserie Mezghanna) <br> Cité 11 Decembre 1960, <br> Boumerdès - Algérie
 
 # Opening hours
 dimanche_jeudi: 9:00 – 17:00
