ajout numerop secretariat

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ api_token: # Enter API token here
 
 # Contact info
 contact:
-    phone: 024.91.22.21/0560.89.71.37/0698.17.58.66
+    phone: 024.91.22.21 <br> 0560.89.71.37 <br> 0698.17.58.66
 #    emergency: 931 53 234
     email: dermatologue.boumerdes@gmail.com
     address: Batiment 60, Numéro 2 <br> En face de la patisserie Mezghanna <br> Cité 11 Decembre 1960, <br> Boumerdès - Algérie
