--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -2,13 +2,13 @@
   image_large: laser-large.jpg
   image_alt: Laser CYNOSURE alexandrite /yag
 
-- image_thumb: gallery-small2.jpg
-  image_large: gallery-large.jpg
-  image_alt: something meaningful
+- image_thumb: cabinet-1-small.jpg
+  image_large: cabinet-1.jpg
+  image_alt: Vue de face
 
-- image_thumb: gallery-small.jpg
-  image_large: gallery-large.jpg
-  image_alt: something meaningful
+- image_thumb: cabinet-2-small.jpg
+  image_large: cabinet-2.jpg
+  image_alt: Vue alternative depuis la route
 
 - image_thumb: gallery-small2.jpg
   image_large: gallery-large.jpg
