--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -10,6 +10,6 @@
   image_large: cabinet-2.jpg
   image_alt: Vue alternative depuis la route
 
-- image_thumb: gallery-small2.jpg
-  image_large: gallery-large.jpg
-  image_alt: something meaningful
+- image_thumb: cabinet-3-small.jpg
+  image_large: cabinet-3.jpg
+  image_alt: Vue depuis le parking
